<resources>
    <string name="app_name">Music</string>

    <string name="title_home">Home</string>
    <string name="title_song">Songs</string>
    <string name="title_albums">Albums</string>
    <string name="title_artist">Artist</string>
    <string name="title_playlist">Playlist</string>
    <string name="title_setting">Settings</string>
    <string name="title_about_us">About us</string>
    <string name="title_policy">Policy</string>
    <string name="textview.play.activity.text_default_time_value">00:00</string>

    <!--tittle tab layout-->
    <string name="song">SONG</string>
    <string name="album">ALBUM</string>
    <string name="artist">ARTIST</string>
    <string name="playlist">PLAYLIST</string>
    <string name="add_new_playlist">Add new playlist</string>
</resources>
